[package]
name = "rrxv6"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register = "0.2.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"

[build-dependencies]
cc = "1.0.25"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
