[package]
name = "rrxv6"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.1"
volatile-register = "0.2.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
linked_list_allocator = "0.9.0"
bitflags = "1.3.2"
rv64 = { version = "0.1.0", path = "../rv64" }

[build-dependencies]
cc = "1.0.25"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
